Wall: Added more readability (fix #268)

--- a/Web/static/css/style.css
+++ b/Web/static/css/style.css
@@ -496,6 +496,7 @@ h4 {
     border-bottom: #ECECEC solid 1px;
     font-size: 11px;
     padding: 3px 5px 3px;
+    line-height: 125%;
 }
 
 .post-author .date {
@@ -512,6 +513,7 @@ h4 {
     padding: 4px;
     font-size: 11px;
     hyphens: manual;
+	line-height: 160%;
 }
 
 .post-content .attachments_b {
